manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-hello
  namespace: lab-hello
  labels:
    app: lab-hello
    app.kubernetes.io/name: lab-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-hello
  template:
    metadata:
      labels:
        app: lab-hello
    spec:
      containers:
        - name: hello
          image: image-registry.openshift-image-registry.svc:5000/lab-hello/lab-hello:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
