manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-hello
  namespace: lab-hello
  labels:
    app: lab-hello
spec:
  selector:
    app: lab-hello
  ports:
    - name: http
      port: 8080
      targetPort: http
